add modal wrapper for view

--- a/public/index.html
+++ b/public/index.html
@@ -47,10 +47,10 @@
     <div id="loadScreen" class="load-screen">
       <div class="loading">Loading...</div>
     </div>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-    />
+<!--    <link-->
+<!--      rel="stylesheet"-->
+<!--      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"-->
+<!--    />-->
     <script src="/bundle.js"></script>
   </body>
 </html>
